<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_beranda"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/beranda"/>
        <item
            android:id="@+id/nav_jasa_pengguna"
            android:icon="@drawable/ic_baseline_work_24"
            android:title="@string/jasa_pengguna"/>
    </group>
    <item android:title="@string/pengaturan_akun">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_baseline_person_24"
                android:title="@string/profil"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>